# diskman

./: .gitignore  README.md  README_CN.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
diskman/: __init__.py  cli.py  models.py
diskman/ai/: __init__.py  service.py
diskman/ai/providers/: __init__.py  base.py  deepseek.py  openai.py
diskman/analysis/: analyzer.py
diskman/analysis/rules/: __init__.py  builtin.py  engine.py
diskman/api/: __init__.py  client.py  server.py
diskman/mcp/: server.py
diskman/operations/: __init__.py  cleaner.py  migrator.py  scanner.py
docs/: PRD.md  PROGRESS.md
tests/: __init__.py  test_analyzer.py  test_cleaner.py  test_migrator.py  test_models.py  test_scanner.py
