[project]
name = "diskman"
version = "0.2.0"
description = "AI-ready disk space analysis and management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["disk", "space", "analysis", "cleanup", "mcp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]
ai = [
    "httpx>=0.27.0",
]
all = [
    "diskman[mcp,api,ai]",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
diskman = "diskman.cli:main"
diskman-mcp = "diskman.mcp.server:run"
diskman-api = "diskman.api.server:run_server"

[project.urls]
Homepage = "https://github.com/yourusername/diskman"
Documentation = "https://github.com/yourusername/diskman#readme"
Repository = "https://github.com/yourusername/diskman"
Issues = "https://github.com/yourusername/diskman/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diskman"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python-version = "3.10"
warn_return_any = true
warn_unused_ignores = true
